plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '4.0.5'
    id 'com.diffplug.spotless' version '7.0.2'
}

group = 'money-pin'
version = '0.0.1-SNAPSHOT'
description = 'muffin'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
    set('querydslVersion', "5.1.0")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
    implementation "org.jsoup:jsoup:1.22.2"
    annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-restdocs'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testCompileOnly 'org.projectlombok:lombok'
    developmentOnly 'com.h2database:h2'
    developmentOnly 'org.springframework.boot:spring-boot-h2console'
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

spotless {
    java {
        // Palantir Java Format
        palantirJavaFormat("2.74.0")
        removeUnusedImports()
        formatAnnotations()
        // 모든 파일은 개행으로 끝나고, 줄 끝 공백은 제거
        endWithNewline()
        trimTrailingWhitespace()
    }
}

// 빌드(compileJava) 시 자동으로 포맷팅 적용
tasks.named('compileJava') {
    dependsOn 'spotlessApply'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    attributes 'snippets': snippetsDir
    dependsOn test
}

// build 시 REST Docs HTML을 생성하고, 생성물을 jar의 static/docs로 포함해 /docs/index.html로 제공한다.
tasks.named('bootJar') {
    dependsOn asciidoctor
    from(layout.buildDirectory.dir('docs/asciidoc')) {
        into 'static/docs'
    }
}
